# torch-lazy

./: Makefile  README.md  pyproject.toml  test.sh
.github/workflows/: ci.yml
tests/nn/modules/: test_linear.py  test_mlp.py  test_normalization.py
torch_lazy/: __init__.py
torch_lazy/nn/: __init__.py
torch_lazy/nn/modules/: linear.py  mlp.py  normalization.py
